--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  yandex_mapkit: ^4.1.0
+  geolocator: ^12.0.0
+  geocoding: ^3.0.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  shared_preferences: ^2.2.3
+  gap: ^3.0.1
+  image: ^4.2.0
+  firebase_ui_auth: ^1.15.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +71,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
